[gd_scene load_steps=5 format=3 uid="uid://dck1oar5qc1lw"]

[ext_resource type="Theme" uid="uid://c4lkfm562pmc7" path="res://resources/themes/StandardTheme.tres" id="1_3qhtx"]
[ext_resource type="Script" uid="uid://1swcm01knhd5" path="res://ui/combat/reward_panel/reward_panel.gd" id="2_a2ia4"]
[ext_resource type="Texture2D" uid="uid://ukgs2dvdeed" path="res://resources/sprites/icons/UnitArchetype.png" id="2_gbcjy"]

[sub_resource type="Theme" id="Theme_a2ia4"]
default_font_size = 36

[node name="RewardPanel" type="PanelContainer"]
custom_minimum_size = Vector2(300, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3qhtx")
script = ExtResource("2_a2ia4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RewardHeaderLabel" type="Label" parent="MarginContainer/MainContainer"]
layout_mode = 2
theme = SubResource("Theme_a2ia4")
text = "REWARDS"
horizontal_alignment = 1

[node name="MainGradeContainer" type="VBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2

[node name="OverallGradeContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/MainGradeContainer"]
layout_mode = 2

[node name="OverallGradeHeaderLabel" type="Label" parent="MarginContainer/MainContainer/MainGradeContainer/OverallGradeContainer"]
layout_mode = 2
text = "Overall Grade:"

[node name="OverallGradeLabel" type="Label" parent="MarginContainer/MainContainer/MainGradeContainer/OverallGradeContainer"]
layout_mode = 2
text = "-"

[node name="TurnCountGradeContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/MainGradeContainer"]
layout_mode = 2

[node name="TurnGradeHeaderLabel" type="Label" parent="MarginContainer/MainContainer/MainGradeContainer/TurnCountGradeContainer"]
layout_mode = 2
text = "Turn Grade:"

[node name="TurnGradeLabel" type="Label" parent="MarginContainer/MainContainer/MainGradeContainer/TurnCountGradeContainer"]
layout_mode = 2
text = "-"

[node name="SurvivalGradeContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/MainGradeContainer"]
layout_mode = 2

[node name="SurvivalGradeHeaderLabel" type="Label" parent="MarginContainer/MainContainer/MainGradeContainer/SurvivalGradeContainer"]
layout_mode = 2
text = "Survival Grade:"

[node name="SurvivalGradeLabel" type="Label" parent="MarginContainer/MainContainer/MainGradeContainer/SurvivalGradeContainer"]
layout_mode = 2
text = "-"

[node name="MainButtonContainer" type="VBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2

[node name="Gold" type="Button" parent="MarginContainer/MainContainer/MainButtonContainer"]
layout_mode = 2
text = "Gold"
icon = ExtResource("2_gbcjy")

[node name="BonusExp" type="Button" parent="MarginContainer/MainContainer/MainButtonContainer"]
layout_mode = 2
text = "Bonus Exp"
icon = ExtResource("2_gbcjy")

[node name="SkipRewards" type="Button" parent="MarginContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Skip Rewards"

[connection signal="pressed" from="MarginContainer/MainContainer/MainButtonContainer/Gold" to="." method="_on_gold_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/MainButtonContainer/BonusExp" to="." method="_on_bonus_exp_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/SkipRewards" to="." method="_on_skip_rewards_pressed"]
